@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,9 @@
 
 package org.springframework.boot.autoconfigure.amqp;
 
+import java.time.Duration;
+import java.util.stream.Collectors;
+
 import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.impl.CredentialsProvider;
 import com.rabbitmq.client.impl.CredentialsRefreshService;
@@ -31,13 +34,13 @@ import org.springframework.amqp.rabbit.core.RabbitOperations;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.amqp.support.converter.MessageConverter;
 import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnSingleCandidate;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
+import org.springframework.boot.context.properties.PropertyMapper;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
@@ -59,6 +62,21 @@ import org.springframework.core.io.ResourceLoader;
  * <li>{@link org.springframework.amqp.core.AmqpAdmin } instance as long as
  * {@literal spring.rabbitmq.dynamic=true}.</li>
  * </ul>
+ * <p>
+ * The {@link org.springframework.amqp.rabbit.connection.CachingConnectionFactory} honors
+ * the following properties:
+ * <ul>
+ * <li>{@literal spring.rabbitmq.port} is used to specify the port to which the client
+ * should connect, and defaults to 5672.</li>
+ * <li>{@literal spring.rabbitmq.username} is used to specify the (optional) username.
+ * </li>
+ * <li>{@literal spring.rabbitmq.password} is used to specify the (optional) password.
+ * </li>
+ * <li>{@literal spring.rabbitmq.host} is used to specify the host, and defaults to
+ * {@literal localhost}.</li>
+ * <li>{@literal spring.rabbitmq.virtualHost} is used to specify the (optional) virtual
+ * host to which the client should connect.</li>
+ * </ul>
  *
  * @author Greg Turnquist
  * @author Josh Long
@@ -66,72 +84,82 @@ import org.springframework.core.io.ResourceLoader;
  * @author Gary Russell
  * @author Phillip Webb
  * @author Artsiom Yudovin
- * @author Chris Bono
- * @author Moritz Halbritter
- * @author Andy Wilkinson
  * @since 1.0.0
  */
-@AutoConfiguration
+@Configuration(proxyBeanMethods = false)
 @ConditionalOnClass({ RabbitTemplate.class, Channel.class })
 @EnableConfigurationProperties(RabbitProperties.class)
-@Import({ RabbitAnnotationDrivenConfiguration.class, RabbitStreamConfiguration.class })
+@Import(RabbitAnnotationDrivenConfiguration.class)
 public class RabbitAutoConfiguration {
 
 	@Configuration(proxyBeanMethods = false)
+	@ConditionalOnMissingBean(ConnectionFactory.class)
 	protected static class RabbitConnectionFactoryCreator {
 
-		private final RabbitProperties properties;
-
-		protected RabbitConnectionFactoryCreator(RabbitProperties properties,
-				ObjectProvider<RabbitConnectionDetails> connectionDetails) {
-			this.properties = properties;
-		}
-
 		@Bean
-		@ConditionalOnMissingBean(RabbitConnectionDetails.class)
-		RabbitConnectionDetails rabbitConnectionDetails() {
-			return new PropertiesRabbitConnectionDetails(this.properties);
-		}
-
-		@Bean
-		@ConditionalOnMissingBean
-		RabbitConnectionFactoryBeanConfigurer rabbitConnectionFactoryBeanConfigurer(ResourceLoader resourceLoader,
-				RabbitConnectionDetails connectionDetails, ObjectProvider<CredentialsProvider> credentialsProvider,
-				ObjectProvider<CredentialsRefreshService> credentialsRefreshService) {
-			RabbitConnectionFactoryBeanConfigurer configurer = new RabbitConnectionFactoryBeanConfigurer(resourceLoader,
-					this.properties, connectionDetails);
-			configurer.setCredentialsProvider(credentialsProvider.getIfUnique());
-			configurer.setCredentialsRefreshService(credentialsRefreshService.getIfUnique());
-			return configurer;
-		}
-
-		@Bean
-		@ConditionalOnMissingBean
-		CachingConnectionFactoryConfigurer rabbitConnectionFactoryConfigurer(RabbitConnectionDetails connectionDetails,
-				ObjectProvider<ConnectionNameStrategy> connectionNameStrategy) {
-			CachingConnectionFactoryConfigurer configurer = new CachingConnectionFactoryConfigurer(this.properties,
-					connectionDetails);
-			configurer.setConnectionNameStrategy(connectionNameStrategy.getIfUnique());
-			return configurer;
-		}
-
-		@Bean
-		@ConditionalOnMissingBean(ConnectionFactory.class)
-		CachingConnectionFactory rabbitConnectionFactory(
-				RabbitConnectionFactoryBeanConfigurer rabbitConnectionFactoryBeanConfigurer,
-				CachingConnectionFactoryConfigurer rabbitCachingConnectionFactoryConfigurer,
+		public CachingConnectionFactory rabbitConnectionFactory(RabbitProperties properties,
+				ResourceLoader resourceLoader, ObjectProvider<CredentialsProvider> credentialsProvider,
+				ObjectProvider<CredentialsRefreshService> credentialsRefreshService,
+				ObjectProvider<ConnectionNameStrategy> connectionNameStrategy,
 				ObjectProvider<ConnectionFactoryCustomizer> connectionFactoryCustomizers) throws Exception {
-
-			RabbitConnectionFactoryBean connectionFactoryBean = new RabbitConnectionFactoryBean();
-			rabbitConnectionFactoryBeanConfigurer.configure(connectionFactoryBean);
-			connectionFactoryBean.afterPropertiesSet();
-			com.rabbitmq.client.ConnectionFactory connectionFactory = connectionFactoryBean.getObject();
+			com.rabbitmq.client.ConnectionFactory connectionFactory = getRabbitConnectionFactoryBean(properties,
+					resourceLoader, credentialsProvider, credentialsRefreshService).getObject();
 			connectionFactoryCustomizers.orderedStream()
-				.forEach((customizer) -> customizer.customize(connectionFactory));
-
+					.forEach((customizer) -> customizer.customize(connectionFactory));
 			CachingConnectionFactory factory = new CachingConnectionFactory(connectionFactory);
-			rabbitCachingConnectionFactoryConfigurer.configure(factory);
+			PropertyMapper map = PropertyMapper.get();
+			map.from(properties::determineAddresses).to(factory::setAddresses);
+			map.from(properties::getAddressShuffleMode).whenNonNull().to(factory::setAddressShuffleMode);
+			map.from(properties::isPublisherReturns).to(factory::setPublisherReturns);
+			map.from(properties::getPublisherConfirmType).whenNonNull().to(factory::setPublisherConfirmType);
+			RabbitProperties.Cache.Channel channel = properties.getCache().getChannel();
+			map.from(channel::getSize).whenNonNull().to(factory::setChannelCacheSize);
+			map.from(channel::getCheckoutTimeout).whenNonNull().as(Duration::toMillis)
+					.to(factory::setChannelCheckoutTimeout);
+			RabbitProperties.Cache.Connection connection = properties.getCache().getConnection();
+			map.from(connection::getMode).whenNonNull().to(factory::setCacheMode);
+			map.from(connection::getSize).whenNonNull().to(factory::setConnectionCacheSize);
+			map.from(connectionNameStrategy::getIfUnique).whenNonNull().to(factory::setConnectionNameStrategy);
+			return factory;
+		}
 
+		private RabbitConnectionFactoryBean getRabbitConnectionFactoryBean(RabbitProperties properties,
+				ResourceLoader resourceLoader, ObjectProvider<CredentialsProvider> credentialsProvider,
+				ObjectProvider<CredentialsRefreshService> credentialsRefreshService) {
+			RabbitConnectionFactoryBean factory = new RabbitConnectionFactoryBean();
+			factory.setResourceLoader(resourceLoader);
+			PropertyMapper map = PropertyMapper.get();
+			map.from(properties::determineHost).whenNonNull().to(factory::setHost);
+			map.from(properties::determinePort).to(factory::setPort);
+			map.from(properties::determineUsername).whenNonNull().to(factory::setUsername);
+			map.from(properties::determinePassword).whenNonNull().to(factory::setPassword);
+			map.from(properties::determineVirtualHost).whenNonNull().to(factory::setVirtualHost);
+			map.from(properties::getRequestedHeartbeat).whenNonNull().asInt(Duration::getSeconds)
+					.to(factory::setRequestedHeartbeat);
+			map.from(properties::getRequestedChannelMax).to(factory::setRequestedChannelMax);
+			RabbitProperties.Ssl ssl = properties.getSsl();
+			if (ssl.determineEnabled()) {
+				factory.setUseSSL(true);
+				map.from(ssl::getAlgorithm).whenNonNull().to(factory::setSslAlgorithm);
+				map.from(ssl::getKeyStoreType).to(factory::setKeyStoreType);
+				map.from(ssl::getKeyStore).to(factory::setKeyStore);
+				map.from(ssl::getKeyStorePassword).to(factory::setKeyStorePassphrase);
+				map.from(ssl::getKeyStoreAlgorithm).whenNonNull().to(factory::setKeyStoreAlgorithm);
+				map.from(ssl::getTrustStoreType).to(factory::setTrustStoreType);
+				map.from(ssl::getTrustStore).to(factory::setTrustStore);
+				map.from(ssl::getTrustStorePassword).to(factory::setTrustStorePassphrase);
+				map.from(ssl::getTrustStoreAlgorithm).whenNonNull().to(factory::setTrustStoreAlgorithm);
+				map.from(ssl::isValidateServerCertificate)
+						.to((validate) -> factory.setSkipServerCertificateValidation(!validate));
+				map.from(ssl::getVerifyHostname).to(factory::setEnableHostnameVerification);
+			}
+			map.from(properties::getConnectionTimeout).whenNonNull().asInt(Duration::toMillis)
+					.to(factory::setConnectionTimeout);
+			map.from(properties::getChannelRpcTimeout).whenNonNull().asInt(Duration::toMillis)
+					.to(factory::setChannelRpcTimeout);
+			map.from(credentialsProvider::getIfUnique).whenNonNull().to(factory::setCredentialsProvider);
+			map.from(credentialsRefreshService::getIfUnique).whenNonNull().to(factory::setCredentialsRefreshService);
+			factory.afterPropertiesSet();
 			return factory;
 		}
 
@@ -146,20 +174,20 @@ public class RabbitAutoConfiguration {
 		public RabbitTemplateConfigurer rabbitTemplateConfigurer(RabbitProperties properties,
 				ObjectProvider<MessageConverter> messageConverter,
 				ObjectProvider<RabbitRetryTemplateCustomizer> retryTemplateCustomizers) {
-			RabbitTemplateConfigurer configurer = new RabbitTemplateConfigurer(properties);
+			RabbitTemplateConfigurer configurer = new RabbitTemplateConfigurer();
 			configurer.setMessageConverter(messageConverter.getIfUnique());
-			configurer.setRetryTemplateCustomizers(retryTemplateCustomizers.orderedStream().toList());
+			configurer
+					.setRetryTemplateCustomizers(retryTemplateCustomizers.orderedStream().collect(Collectors.toList()));
+			configurer.setRabbitProperties(properties);
 			return configurer;
 		}
 
 		@Bean
 		@ConditionalOnSingleCandidate(ConnectionFactory.class)
 		@ConditionalOnMissingBean(RabbitOperations.class)
-		public RabbitTemplate rabbitTemplate(RabbitTemplateConfigurer configurer, ConnectionFactory connectionFactory,
-				ObjectProvider<RabbitTemplateCustomizer> customizers) {
+		public RabbitTemplate rabbitTemplate(RabbitTemplateConfigurer configurer, ConnectionFactory connectionFactory) {
 			RabbitTemplate template = new RabbitTemplate();
 			configurer.configure(template, connectionFactory);
-			customizers.orderedStream().forEach((customizer) -> customizer.customize(template));
 			return template;
 		}
 
