@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,10 @@
 package org.springframework.boot.test.autoconfigure.web.reactive;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.boot.autoconfigure.AutoConfiguration;
+import org.springframework.boot.autoconfigure.AutoConfigureAfter;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
@@ -31,6 +32,7 @@ import org.springframework.boot.test.web.reactive.server.WebTestClientBuilderCus
 import org.springframework.boot.web.codec.CodecCustomizer;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
 import org.springframework.test.web.reactive.server.MockServerConfigurer;
 import org.springframework.test.web.reactive.server.WebTestClient;
@@ -44,8 +46,9 @@ import org.springframework.web.server.WebHandler;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
-@AutoConfiguration(after = { CodecsAutoConfiguration.class, WebFluxAutoConfiguration.class })
+@Configuration(proxyBeanMethods = false)
 @ConditionalOnClass({ WebClient.class, WebTestClient.class })
+@AutoConfigureAfter({ CodecsAutoConfiguration.class, WebFluxAutoConfiguration.class })
 @Import(WebTestClientSecurityConfiguration.class)
 @EnableConfigurationProperties
 public class WebTestClientAutoConfiguration {
@@ -70,7 +73,8 @@ public class WebTestClientAutoConfiguration {
 	@ConfigurationProperties(prefix = "spring.test.webtestclient")
 	public SpringBootWebTestClientBuilderCustomizer springBootWebTestClientBuilderCustomizer(
 			ObjectProvider<CodecCustomizer> codecCustomizers) {
-		return new SpringBootWebTestClientBuilderCustomizer(codecCustomizers.orderedStream().toList());
+		return new SpringBootWebTestClientBuilderCustomizer(
+				codecCustomizers.orderedStream().collect(Collectors.toList()));
 	}
 
 }
