@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,10 @@
 
 package org.springframework.boot.configurationprocessor;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
@@ -43,7 +45,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTests {
 
 	@Test
-	void constructorParameterSimpleProperty() {
+	void constructorParameterSimpleProperty() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
@@ -56,7 +58,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterNestedPropertySameClass() {
+	void constructorParameterNestedPropertySameClass() throws IOException {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "first");
@@ -69,7 +71,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterNestedPropertyWithAnnotation() {
+	void constructorParameterNestedPropertyWithAnnotation() throws IOException {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "third");
@@ -82,7 +84,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterSimplePropertyWithNoAccessorShouldBeExposed() {
+	void constructorParameterSimplePropertyWithNoAccessorShouldBeExposed() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "counter");
@@ -95,36 +97,29 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterMetadataSimpleProperty() {
+	void constructorParameterMetadataSimpleProperty() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "counter");
-			assertItemMetadata(metadataEnv, property).isProperty()
-				.hasName("test.counter")
-				.hasType(Long.class)
-				.hasSourceType(ImmutableSimpleProperties.class)
-				.hasNoDescription()
-				.isNotDeprecated();
+			assertItemMetadata(metadataEnv, property).isProperty().hasName("test.counter").hasType(Long.class)
+					.hasSourceType(ImmutableSimpleProperties.class).hasNoDescription().isNotDeprecated();
 		});
 	}
 
 	@Test
-	void constructorParameterMetadataNestedGroup() {
+	void constructorParameterMetadataNestedGroup() throws IOException {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "first");
-			assertItemMetadata(metadataEnv, property).isGroup()
-				.hasName("test.first")
-				.hasType("org.springframework.boot.configurationsample.immutable.ImmutableInnerClassProperties$Foo")
-				.hasSourceType(ImmutableInnerClassProperties.class)
-				.hasSourceMethod("getFirst()")
-				.hasNoDescription()
-				.isNotDeprecated();
+			assertItemMetadata(metadataEnv, property).isGroup().hasName("test.first")
+					.hasType("org.springframework.boot.configurationsample.immutable.ImmutableInnerClassProperties$Foo")
+					.hasSourceType(ImmutableInnerClassProperties.class).hasSourceMethod("getFirst()").hasNoDescription()
+					.isNotDeprecated();
 		});
 	}
 
 	@Test
-	void constructorParameterDeprecatedPropertyOnGetter() {
+	void constructorParameterDeprecatedPropertyOnGetter() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ExecutableElement getter = getMethod(ownerElement, "isFlag");
@@ -137,17 +132,17 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithDescription() {
+	void constructorParameterPropertyWithDescription() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
 			assertItemMetadata(metadataEnv, property).isProperty()
-				.hasDescription("The name of this simple properties.");
+					.hasDescription("The name of this simple properties.");
 		});
 	}
 
 	@Test
-	void constructorParameterPropertyWithDefaultValue() {
+	void constructorParameterPropertyWithDefaultValue() throws IOException {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
@@ -156,14 +151,14 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveTypes() {
+	void constructorParameterPropertyWithPrimitiveTypes() throws IOException {
 		process(ImmutablePrimitiveProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(false);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "octet")).hasDefaultValue((byte) 0);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "letter")).hasDefaultValue(null);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "number"))
-				.hasDefaultValue((short) 0);
+					.hasDefaultValue((short) 0);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "counter")).hasDefaultValue(0);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "value")).hasDefaultValue(0L);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "percentage")).hasDefaultValue(0F);
@@ -172,15 +167,15 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveTypesAndDefaultValues() {
+	void constructorParameterPropertyWithPrimitiveTypesAndDefaultValues() throws IOException {
 		process(ImmutablePrimitiveWithDefaultsProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveWithDefaultsProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(true);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "octet"))
-				.hasDefaultValue((byte) 120);
+					.hasDefaultValue((byte) 120);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "letter")).hasDefaultValue("a");
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "number"))
-				.hasDefaultValue((short) 1000);
+					.hasDefaultValue((short) 1000);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "counter")).hasDefaultValue(42);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "value")).hasDefaultValue(2000L);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "percentage")).hasDefaultValue(0.5F);
@@ -189,15 +184,15 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveWrapperTypesAndDefaultValues() {
+	void constructorParameterPropertyWithPrimitiveWrapperTypesAndDefaultValues() throws IOException {
 		process(ImmutablePrimitiveWrapperWithDefaultsProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveWrapperWithDefaultsProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(true);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "octet"))
-				.hasDefaultValue((byte) 120);
+					.hasDefaultValue((byte) 120);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "letter")).hasDefaultValue("a");
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "number"))
-				.hasDefaultValue((short) 1000);
+					.hasDefaultValue((short) 1000);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "counter")).hasDefaultValue(42);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "value")).hasDefaultValue(2000L);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "percentage")).hasDefaultValue(0.5F);
@@ -206,14 +201,14 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithCollectionTypesAndDefaultValues() {
+	void constructorParameterPropertyWithCollectionTypesAndDefaultValues() throws IOException {
 		process(ImmutableCollectionProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableCollectionProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "names")).hasDefaultValue(null);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flags"))
-				.hasDefaultValue(Arrays.asList(true, false));
+					.hasDefaultValue(Arrays.asList(true, false));
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "durations"))
-				.hasDefaultValue(Arrays.asList("10s", "1m", "1h"));
+					.hasDefaultValue(Arrays.asList("10s", "1m", "1h"));
 		});
 	}
 
@@ -227,19 +222,13 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	private VariableElement getConstructorParameter(TypeElement ownerElement, String name) {
-		List<ExecutableElement> constructors = ElementFilter.constructorsIn(ownerElement.getEnclosedElements())
-			.stream()
-			.filter((constructor) -> !constructor.getParameters().isEmpty())
-			.toList();
+		List<ExecutableElement> constructors = ElementFilter.constructorsIn(ownerElement.getEnclosedElements()).stream()
+				.filter((constructor) -> !constructor.getParameters().isEmpty()).collect(Collectors.toList());
 		if (constructors.size() != 1) {
 			throw new IllegalStateException("No candidate constructor for " + ownerElement);
 		}
-		return constructors.get(0)
-			.getParameters()
-			.stream()
-			.filter((parameter) -> parameter.getSimpleName().toString().equals(name))
-			.findFirst()
-			.orElse(null);
+		return constructors.get(0).getParameters().stream()
+				.filter((parameter) -> parameter.getSimpleName().toString().equals(name)).findFirst().orElse(null);
 	}
 
 }
