@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,14 +24,13 @@ import java.util.jar.Attributes;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
 
-import org.assertj.core.api.Assumptions;
+import org.gradle.api.JavaVersion;
 import org.gradle.testkit.runner.BuildResult;
 import org.gradle.testkit.runner.TaskOutcome;
-import org.gradle.util.GradleVersion;
 import org.junit.jupiter.api.TestTemplate;
 
 import org.springframework.boot.gradle.junit.GradleCompatibility;
-import org.springframework.boot.testsupport.gradle.testkit.GradleBuild;
+import org.springframework.boot.gradle.testkit.GradleBuild;
 import org.springframework.util.FileSystemUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -89,7 +88,7 @@ class BootRunIntegrationTests {
 		BuildResult result = this.gradleBuild.build("bootRun");
 		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
 		assertThat(result.getOutput())
-			.contains("Main class name = com.example.bootrun.classpath.BootRunClasspathApplication");
+				.contains("Main class name = com.example.bootrun.classpath.BootRunClasspathApplication");
 	}
 
 	@TestTemplate
@@ -97,7 +96,12 @@ class BootRunIntegrationTests {
 		copyJvmArgsApplication();
 		BuildResult result = this.gradleBuild.build("bootRun");
 		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
-		assertThat(result.getOutput()).contains("-XX:TieredStopAtLevel=1");
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+			assertThat(result.getOutput()).contains("1. -XX:TieredStopAtLevel=1");
+		}
+		else {
+			assertThat(result.getOutput()).contains("1. -Xverify:none").contains("2. -XX:TieredStopAtLevel=1");
+		}
 	}
 
 	@TestTemplate
@@ -110,19 +114,17 @@ class BootRunIntegrationTests {
 
 	@TestTemplate
 	void applicationPluginJvmArgumentsAreUsed() throws IOException {
-		if (this.gradleBuild.isConfigurationCache()) {
-			// https://github.com/gradle/gradle/pull/23924
-			GradleVersion gradleVersion = GradleVersion.version(this.gradleBuild.getGradleVersion());
-			Assumptions.assumeThat(gradleVersion)
-				.isLessThan(GradleVersion.version("8.0"))
-				.isGreaterThanOrEqualTo(GradleVersion.version("8.1-rc-1"));
-		}
 		copyJvmArgsApplication();
 		BuildResult result = this.gradleBuild.build("bootRun");
 		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
-		assertThat(result.getOutput()).contains("-Dcom.bar=baz")
-			.contains("-Dcom.foo=bar")
-			.contains("-XX:TieredStopAtLevel=1");
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+			assertThat(result.getOutput()).contains("1. -Dcom.bar=baz").contains("2. -Dcom.foo=bar")
+					.contains("3. -XX:TieredStopAtLevel=1");
+		}
+		else {
+			assertThat(result.getOutput()).contains("1. -Dcom.bar=baz").contains("2. -Dcom.foo=bar")
+					.contains("3. -Xverify:none").contains("4. -XX:TieredStopAtLevel=1");
+		}
 	}
 
 	@TestTemplate
