@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,7 @@
 
 package org.springframework.boot;
 
-import java.lang.StackWalker.StackFrame;
-import java.time.Duration;
+import java.lang.reflect.Constructor;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -26,29 +25,26 @@ import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
-import org.springframework.aot.AotDetector;
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.BeansException;
+import org.springframework.beans.CachedIntrospectionResults;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.BeanFactoryPostProcessor;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.beans.factory.groovy.GroovyBeanDefinitionReader;
-import org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.beans.factory.support.BeanNameGenerator;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.boot.Banner.Mode;
 import org.springframework.boot.context.properties.bind.Bindable;
-import org.springframework.boot.context.properties.bind.BindableRuntimeHintsRegistrar;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
 import org.springframework.boot.convert.ApplicationConversionService;
@@ -63,13 +59,11 @@ import org.springframework.context.annotation.AnnotationConfigApplicationContext
 import org.springframework.context.annotation.AnnotationConfigUtils;
 import org.springframework.context.annotation.ClassPathBeanDefinitionScanner;
 import org.springframework.context.annotation.ConfigurationClassPostProcessor;
-import org.springframework.context.aot.AotApplicationContextInitializer;
 import org.springframework.context.support.AbstractApplicationContext;
 import org.springframework.context.support.GenericApplicationContext;
 import org.springframework.core.GenericTypeResolver;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
-import org.springframework.core.annotation.Order;
 import org.springframework.core.env.CommandLinePropertySource;
 import org.springframework.core.env.CompositePropertySource;
 import org.springframework.core.env.ConfigurableEnvironment;
@@ -77,19 +71,18 @@ import org.springframework.core.env.Environment;
 import org.springframework.core.env.MutablePropertySources;
 import org.springframework.core.env.PropertySource;
 import org.springframework.core.env.SimpleCommandLinePropertySource;
+import org.springframework.core.env.StandardEnvironment;
 import org.springframework.core.io.DefaultResourceLoader;
 import org.springframework.core.io.ResourceLoader;
 import org.springframework.core.io.support.SpringFactoriesLoader;
-import org.springframework.core.io.support.SpringFactoriesLoader.ArgumentResolver;
 import org.springframework.core.metrics.ApplicationStartup;
 import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.ReflectionUtils;
+import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
-import org.springframework.util.function.ThrowingConsumer;
-import org.springframework.util.function.ThrowingSupplier;
 
 /**
  * Class that can be used to bootstrap and launch a Spring application from a Java main
@@ -161,13 +154,42 @@ import org.springframework.util.function.ThrowingSupplier;
  * @author Madhura Bhave
  * @author Brian Clozel
  * @author Ethan Rubinson
- * @author Chris Bono
  * @since 1.0.0
  * @see #run(Class, String[])
  * @see #run(Class[], String[])
  * @see #SpringApplication(Class...)
  */
 public class SpringApplication {
+
+	/**
+	 * The class name of application context that will be used by default for non-web
+	 * environments.
+	 * @deprecated since 2.4.0 for removal in 2.6.0 in favor of using a
+	 * {@link ApplicationContextFactory}
+	 */
+	@Deprecated
+	public static final String DEFAULT_CONTEXT_CLASS = "org.springframework.context."
+			+ "annotation.AnnotationConfigApplicationContext";
+
+	/**
+	 * The class name of application context that will be used by default for web
+	 * environments.
+	 * @deprecated since 2.4.0 for removal in 2.6.0 in favor of using an
+	 * {@link ApplicationContextFactory}
+	 */
+	@Deprecated
+	public static final String DEFAULT_SERVLET_WEB_CONTEXT_CLASS = "org.springframework.boot."
+			+ "web.servlet.context.AnnotationConfigServletWebServerApplicationContext";
+
+	/**
+	 * The class name of application context that will be used by default for reactive web
+	 * environments.
+	 * @deprecated since 2.4.0 for removal in 2.6.0 in favor of using an
+	 * {@link ApplicationContextFactory}
+	 */
+	@Deprecated
+	public static final String DEFAULT_REACTIVE_WEB_CONTEXT_CLASS = "org.springframework."
+			+ "boot.web.reactive.context.AnnotationConfigReactiveWebServerApplicationContext";
 
 	/**
 	 * Default banner location.
@@ -185,9 +207,7 @@ public class SpringApplication {
 
 	static final SpringApplicationShutdownHook shutdownHook = new SpringApplicationShutdownHook();
 
-	private static final ThreadLocal<SpringApplicationHook> applicationHook = new ThreadLocal<>();
-
-	private final Set<Class<?>> primarySources;
+	private Set<Class<?>> primarySources;
 
 	private Set<String> sources = new LinkedHashSet<>();
 
@@ -221,13 +241,11 @@ public class SpringApplication {
 
 	private Map<String, Object> defaultProperties;
 
-	private final List<BootstrapRegistryInitializer> bootstrapRegistryInitializers;
+	private List<BootstrapRegistryInitializer> bootstrapRegistryInitializers;
 
 	private Set<String> additionalProfiles = Collections.emptySet();
 
 	private boolean allowBeanDefinitionOverriding;
-
-	private boolean allowCircularReferences;
 
 	private boolean isCustomEnvironment = false;
 
@@ -242,7 +260,7 @@ public class SpringApplication {
 	/**
 	 * Create a new {@link SpringApplication} instance. The application context will load
 	 * beans from the specified primary sources (see {@link SpringApplication class-level}
-	 * documentation for details). The instance can be customized before calling
+	 * documentation for details. The instance can be customized before calling
 	 * {@link #run(String...)}.
 	 * @param primarySources the primary bean sources
 	 * @see #run(Class, String[])
@@ -256,7 +274,7 @@ public class SpringApplication {
 	/**
 	 * Create a new {@link SpringApplication} instance. The application context will load
 	 * beans from the specified primary sources (see {@link SpringApplication class-level}
-	 * documentation for details). The instance can be customized before calling
+	 * documentation for details. The instance can be customized before calling
 	 * {@link #run(String...)}.
 	 * @param resourceLoader the resource loader to use
 	 * @param primarySources the primary bean sources
@@ -269,23 +287,35 @@ public class SpringApplication {
 		Assert.notNull(primarySources, "PrimarySources must not be null");
 		this.primarySources = new LinkedHashSet<>(Arrays.asList(primarySources));
 		this.webApplicationType = WebApplicationType.deduceFromClasspath();
-		this.bootstrapRegistryInitializers = new ArrayList<>(
-				getSpringFactoriesInstances(BootstrapRegistryInitializer.class));
+		this.bootstrapRegistryInitializers = getBootstrapRegistryInitializersFromSpringFactories();
 		setInitializers((Collection) getSpringFactoriesInstances(ApplicationContextInitializer.class));
 		setListeners((Collection) getSpringFactoriesInstances(ApplicationListener.class));
 		this.mainApplicationClass = deduceMainApplicationClass();
 	}
 
-	private Class<?> deduceMainApplicationClass() {
-		return StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE)
-			.walk(this::findMainClass)
-			.orElse(null);
+	@SuppressWarnings("deprecation")
+	private List<BootstrapRegistryInitializer> getBootstrapRegistryInitializersFromSpringFactories() {
+		ArrayList<BootstrapRegistryInitializer> initializers = new ArrayList<>();
+		getSpringFactoriesInstances(Bootstrapper.class).stream()
+				.map((bootstrapper) -> ((BootstrapRegistryInitializer) bootstrapper::initialize))
+				.forEach(initializers::add);
+		initializers.addAll(getSpringFactoriesInstances(BootstrapRegistryInitializer.class));
+		return initializers;
 	}
 
-	private Optional<Class<?>> findMainClass(Stream<StackFrame> stack) {
-		return stack.filter((frame) -> Objects.equals(frame.getMethodName(), "main"))
-			.findFirst()
-			.map(StackWalker.StackFrame::getDeclaringClass);
+	private Class<?> deduceMainApplicationClass() {
+		try {
+			StackTraceElement[] stackTrace = new RuntimeException().getStackTrace();
+			for (StackTraceElement stackTraceElement : stackTrace) {
+				if ("main".equals(stackTraceElement.getMethodName())) {
+					return Class.forName(stackTraceElement.getClassName());
+				}
+			}
+		}
+		catch (ClassNotFoundException ex) {
+			// Swallow and continue
+		}
+		return null;
 	}
 
 	/**
@@ -295,7 +325,8 @@ public class SpringApplication {
 	 * @return a running {@link ApplicationContext}
 	 */
 	public ConfigurableApplicationContext run(String... args) {
-		long startTime = System.nanoTime();
+		StopWatch stopWatch = new StopWatch();
+		stopWatch.start();
 		DefaultBootstrapContext bootstrapContext = createBootstrapContext();
 		ConfigurableApplicationContext context = null;
 		configureHeadlessProperty();
@@ -304,36 +335,29 @@ public class SpringApplication {
 		try {
 			ApplicationArguments applicationArguments = new DefaultApplicationArguments(args);
 			ConfigurableEnvironment environment = prepareEnvironment(listeners, bootstrapContext, applicationArguments);
+			configureIgnoreBeanInfo(environment);
 			Banner printedBanner = printBanner(environment);
 			context = createApplicationContext();
 			context.setApplicationStartup(this.applicationStartup);
 			prepareContext(bootstrapContext, context, environment, listeners, applicationArguments, printedBanner);
 			refreshContext(context);
 			afterRefresh(context, applicationArguments);
-			Duration timeTakenToStartup = Duration.ofNanos(System.nanoTime() - startTime);
+			stopWatch.stop();
 			if (this.logStartupInfo) {
-				new StartupInfoLogger(this.mainApplicationClass).logStarted(getApplicationLog(), timeTakenToStartup);
+				new StartupInfoLogger(this.mainApplicationClass).logStarted(getApplicationLog(), stopWatch);
 			}
-			listeners.started(context, timeTakenToStartup);
+			listeners.started(context);
 			callRunners(context, applicationArguments);
 		}
 		catch (Throwable ex) {
-			if (ex instanceof AbandonedRunException) {
-				throw ex;
-			}
 			handleRunFailure(context, ex, listeners);
 			throw new IllegalStateException(ex);
 		}
+
 		try {
-			if (context.isRunning()) {
-				Duration timeTakenToReady = Duration.ofNanos(System.nanoTime() - startTime);
-				listeners.ready(context, timeTakenToReady);
-			}
+			listeners.running(context);
 		}
 		catch (Throwable ex) {
-			if (ex instanceof AbandonedRunException) {
-				throw ex;
-			}
 			handleRunFailure(context, ex, null);
 			throw new IllegalStateException(ex);
 		}
@@ -358,23 +382,35 @@ public class SpringApplication {
 				"Environment prefix cannot be set via properties.");
 		bindToSpringApplication(environment);
 		if (!this.isCustomEnvironment) {
-			EnvironmentConverter environmentConverter = new EnvironmentConverter(getClassLoader());
-			environment = environmentConverter.convertEnvironmentIfNecessary(environment, deduceEnvironmentClass());
+			environment = convertEnvironment(environment);
 		}
 		ConfigurationPropertySources.attach(environment);
 		return environment;
 	}
 
-	private Class<? extends ConfigurableEnvironment> deduceEnvironmentClass() {
-		Class<? extends ConfigurableEnvironment> environmentType = this.applicationContextFactory
-			.getEnvironmentType(this.webApplicationType);
-		if (environmentType == null && this.applicationContextFactory != ApplicationContextFactory.DEFAULT) {
-			environmentType = ApplicationContextFactory.DEFAULT.getEnvironmentType(this.webApplicationType);
-		}
-		if (environmentType == null) {
+	/**
+	 * Convert the given {@link ConfigurableEnvironment environment} to an application
+	 * environment that doesn't attempt to resolve profile properties directly.
+	 * @param environment the environment to convert
+	 * @return the converted environment
+	 * @since 2.5.7
+	 * @deprecated since 2.5.8 for removal in 2.7.0
+	 */
+	@Deprecated
+	public StandardEnvironment convertEnvironment(ConfigurableEnvironment environment) {
+		return new EnvironmentConverter(getClassLoader()).convertEnvironmentIfNecessary(environment,
+				deduceEnvironmentClass());
+	}
+
+	private Class<? extends StandardEnvironment> deduceEnvironmentClass() {
+		switch (this.webApplicationType) {
+		case SERVLET:
+			return ApplicationServletEnvironment.class;
+		case REACTIVE:
+			return ApplicationReactiveWebEnvironment.class;
+		default:
 			return ApplicationEnvironment.class;
 		}
-		return environmentType;
 	}
 
 	private void prepareContext(DefaultBootstrapContext bootstrapContext, ConfigurableApplicationContext context,
@@ -382,7 +418,6 @@ public class SpringApplication {
 			ApplicationArguments applicationArguments, Banner printedBanner) {
 		context.setEnvironment(environment);
 		postProcessApplicationContext(context);
-		addAotGeneratedInitializerIfNecessary(this.initializers);
 		applyInitializers(context);
 		listeners.contextPrepared(context);
 		bootstrapContext.close(context);
@@ -396,36 +431,19 @@ public class SpringApplication {
 		if (printedBanner != null) {
 			beanFactory.registerSingleton("springBootBanner", printedBanner);
 		}
-		if (beanFactory instanceof AbstractAutowireCapableBeanFactory autowireCapableBeanFactory) {
-			autowireCapableBeanFactory.setAllowCircularReferences(this.allowCircularReferences);
-			if (beanFactory instanceof DefaultListableBeanFactory listableBeanFactory) {
-				listableBeanFactory.setAllowBeanDefinitionOverriding(this.allowBeanDefinitionOverriding);
-			}
+		if (beanFactory instanceof DefaultListableBeanFactory) {
+			((DefaultListableBeanFactory) beanFactory)
+					.setAllowBeanDefinitionOverriding(this.allowBeanDefinitionOverriding);
 		}
 		if (this.lazyInitialization) {
 			context.addBeanFactoryPostProcessor(new LazyInitializationBeanFactoryPostProcessor());
 		}
 		context.addBeanFactoryPostProcessor(new PropertySourceOrderingBeanFactoryPostProcessor(context));
-		if (!AotDetector.useGeneratedArtifacts()) {
-			// Load the sources
-			Set<Object> sources = getAllSources();
-			Assert.notEmpty(sources, "Sources must not be empty");
-			load(context, sources.toArray(new Object[0]));
-		}
+		// Load the sources
+		Set<Object> sources = getAllSources();
+		Assert.notEmpty(sources, "Sources must not be empty");
+		load(context, sources.toArray(new Object[0]));
 		listeners.contextLoaded(context);
-	}
-
-	private void addAotGeneratedInitializerIfNecessary(List<ApplicationContextInitializer<?>> initializers) {
-		if (AotDetector.useGeneratedArtifacts()) {
-			List<ApplicationContextInitializer<?>> aotInitializers = new ArrayList<>(
-					initializers.stream().filter(AotApplicationContextInitializer.class::isInstance).toList());
-			if (aotInitializers.isEmpty()) {
-				String initializerClassName = this.mainApplicationClass.getName() + "__ApplicationContextInitializer";
-				aotInitializers.add(AotApplicationContextInitializer.forInitializerClasses(initializerClassName));
-			}
-			initializers.removeAll(aotInitializers);
-			initializers.addAll(0, aotInitializers);
-		}
 	}
 
 	private void refreshContext(ConfigurableApplicationContext context) {
@@ -441,36 +459,56 @@ public class SpringApplication {
 	}
 
 	private SpringApplicationRunListeners getRunListeners(String[] args) {
-		ArgumentResolver argumentResolver = ArgumentResolver.of(SpringApplication.class, this);
-		argumentResolver = argumentResolver.and(String[].class, args);
-		List<SpringApplicationRunListener> listeners = getSpringFactoriesInstances(SpringApplicationRunListener.class,
-				argumentResolver);
-		SpringApplicationHook hook = applicationHook.get();
-		SpringApplicationRunListener hookListener = (hook != null) ? hook.getRunListener(this) : null;
-		if (hookListener != null) {
-			listeners = new ArrayList<>(listeners);
-			listeners.add(hookListener);
+		Class<?>[] types = new Class<?>[] { SpringApplication.class, String[].class };
+		return new SpringApplicationRunListeners(logger,
+				getSpringFactoriesInstances(SpringApplicationRunListener.class, types, this, args),
+				this.applicationStartup);
+	}
+
+	private <T> Collection<T> getSpringFactoriesInstances(Class<T> type) {
+		return getSpringFactoriesInstances(type, new Class<?>[] {});
+	}
+
+	private <T> Collection<T> getSpringFactoriesInstances(Class<T> type, Class<?>[] parameterTypes, Object... args) {
+		ClassLoader classLoader = getClassLoader();
+		// Use names and ensure unique to protect against duplicates
+		Set<String> names = new LinkedHashSet<>(SpringFactoriesLoader.loadFactoryNames(type, classLoader));
+		List<T> instances = createSpringFactoriesInstances(type, parameterTypes, classLoader, args, names);
+		AnnotationAwareOrderComparator.sort(instances);
+		return instances;
+	}
+
+	@SuppressWarnings("unchecked")
+	private <T> List<T> createSpringFactoriesInstances(Class<T> type, Class<?>[] parameterTypes,
+			ClassLoader classLoader, Object[] args, Set<String> names) {
+		List<T> instances = new ArrayList<>(names.size());
+		for (String name : names) {
+			try {
+				Class<?> instanceClass = ClassUtils.forName(name, classLoader);
+				Assert.isAssignable(type, instanceClass);
+				Constructor<?> constructor = instanceClass.getDeclaredConstructor(parameterTypes);
+				T instance = (T) BeanUtils.instantiateClass(constructor, args);
+				instances.add(instance);
+			}
+			catch (Throwable ex) {
+				throw new IllegalArgumentException("Cannot instantiate " + type + " : " + name, ex);
+			}
 		}
-		return new SpringApplicationRunListeners(logger, listeners, this.applicationStartup);
-	}
-
-	private <T> List<T> getSpringFactoriesInstances(Class<T> type) {
-		return getSpringFactoriesInstances(type, null);
-	}
-
-	private <T> List<T> getSpringFactoriesInstances(Class<T> type, ArgumentResolver argumentResolver) {
-		return SpringFactoriesLoader.forDefaultResourceLocation(getClassLoader()).load(type, argumentResolver);
+		return instances;
 	}
 
 	private ConfigurableEnvironment getOrCreateEnvironment() {
 		if (this.environment != null) {
 			return this.environment;
 		}
-		ConfigurableEnvironment environment = this.applicationContextFactory.createEnvironment(this.webApplicationType);
-		if (environment == null && this.applicationContextFactory != ApplicationContextFactory.DEFAULT) {
-			environment = ApplicationContextFactory.DEFAULT.createEnvironment(this.webApplicationType);
+		switch (this.webApplicationType) {
+		case SERVLET:
+			return new ApplicationServletEnvironment();
+		case REACTIVE:
+			return new ApplicationReactiveWebEnvironment();
+		default:
+			return new ApplicationEnvironment();
 		}
-		return (environment != null) ? environment : new ApplicationEnvironment();
 	}
 
 	/**
@@ -509,8 +547,8 @@ public class SpringApplication {
 			if (sources.contains(name)) {
 				PropertySource<?> source = sources.get(name);
 				CompositePropertySource composite = new CompositePropertySource(name);
-				composite
-					.addPropertySource(new SimpleCommandLinePropertySource("springApplicationCommandLineArgs", args));
+				composite.addPropertySource(
+						new SimpleCommandLinePropertySource("springApplicationCommandLineArgs", args));
 				composite.addPropertySource(source);
 				sources.replace(name, composite);
 			}
@@ -523,12 +561,20 @@ public class SpringApplication {
 	/**
 	 * Configure which profiles are active (or active by default) for this application
 	 * environment. Additional profiles may be activated during configuration file
-	 * processing through the {@code spring.profiles.active} property.
+	 * processing via the {@code spring.profiles.active} property.
 	 * @param environment this application's environment
 	 * @param args arguments passed to the {@code run} method
 	 * @see #configureEnvironment(ConfigurableEnvironment, String[])
+	 * @see org.springframework.boot.context.config.ConfigFileApplicationListener
 	 */
 	protected void configureProfiles(ConfigurableEnvironment environment, String[] args) {
+	}
+
+	private void configureIgnoreBeanInfo(ConfigurableEnvironment environment) {
+		if (System.getProperty(CachedIntrospectionResults.IGNORE_BEANINFO_PROPERTY_NAME) == null) {
+			Boolean ignore = environment.getProperty("spring.beaninfo.ignore", Boolean.class, Boolean.TRUE);
+			System.setProperty(CachedIntrospectionResults.IGNORE_BEANINFO_PROPERTY_NAME, ignore.toString());
+		}
 	}
 
 	/**
@@ -562,6 +608,7 @@ public class SpringApplication {
 	 * method will respect any explicitly set application context class or factory before
 	 * falling back to a suitable default.
 	 * @return the application context (not yet refreshed)
+	 * @see #setApplicationContextClass(Class)
 	 * @see #setApplicationContextFactory(ApplicationContextFactory)
 	 */
 	protected ConfigurableApplicationContext createApplicationContext() {
@@ -575,15 +622,15 @@ public class SpringApplication {
 	 */
 	protected void postProcessApplicationContext(ConfigurableApplicationContext context) {
 		if (this.beanNameGenerator != null) {
-			context.getBeanFactory()
-				.registerSingleton(AnnotationConfigUtils.CONFIGURATION_BEAN_NAME_GENERATOR, this.beanNameGenerator);
+			context.getBeanFactory().registerSingleton(AnnotationConfigUtils.CONFIGURATION_BEAN_NAME_GENERATOR,
+					this.beanNameGenerator);
 		}
 		if (this.resourceLoader != null) {
-			if (context instanceof GenericApplicationContext genericApplicationContext) {
-				genericApplicationContext.setResourceLoader(this.resourceLoader);
+			if (context instanceof GenericApplicationContext) {
+				((GenericApplicationContext) context).setResourceLoader(this.resourceLoader);
 			}
-			if (context instanceof DefaultResourceLoader defaultResourceLoader) {
-				defaultResourceLoader.setClassLoader(this.resourceLoader.getClassLoader());
+			if (context instanceof DefaultResourceLoader) {
+				((DefaultResourceLoader) context).setClassLoader(this.resourceLoader.getClassLoader());
 			}
 		}
 		if (this.addConversionService) {
@@ -642,7 +689,7 @@ public class SpringApplication {
 	}
 
 	private List<String> quoteProfiles(String[] profiles) {
-		return Arrays.stream(profiles).map((profile) -> "\"" + profile + "\"").toList();
+		return Arrays.stream(profiles).map((profile) -> "\"" + profile + "\"").collect(Collectors.toList());
 	}
 
 	/**
@@ -689,7 +736,7 @@ public class SpringApplication {
 
 	/**
 	 * Either the ClassLoader that will be used in the ApplicationContext (if
-	 * {@link #setResourceLoader(ResourceLoader) resourceLoader} is set), or the context
+	 * {@link #setResourceLoader(ResourceLoader) resourceLoader} is set, or the context
 	 * class loader (if not null), or the loader of the Spring {@link ClassUtils} class.
 	 * @return a ClassLoader (never null)
 	 */
@@ -706,11 +753,11 @@ public class SpringApplication {
 	 * @return the BeanDefinitionRegistry if it can be determined
 	 */
 	private BeanDefinitionRegistry getBeanDefinitionRegistry(ApplicationContext context) {
-		if (context instanceof BeanDefinitionRegistry registry) {
-			return registry;
+		if (context instanceof BeanDefinitionRegistry) {
+			return (BeanDefinitionRegistry) context;
 		}
-		if (context instanceof AbstractApplicationContext abstractApplicationContext) {
-			return (BeanDefinitionRegistry) abstractApplicationContext.getBeanFactory();
+		if (context instanceof AbstractApplicationContext) {
+			return (BeanDefinitionRegistry) ((AbstractApplicationContext) context).getBeanFactory();
 		}
 		throw new IllegalStateException("Could not locate BeanDefinitionRegistry");
 	}
@@ -747,11 +794,11 @@ public class SpringApplication {
 		runners.addAll(context.getBeansOfType(CommandLineRunner.class).values());
 		AnnotationAwareOrderComparator.sort(runners);
 		for (Object runner : new LinkedHashSet<>(runners)) {
-			if (runner instanceof ApplicationRunner applicationRunner) {
-				callRunner(applicationRunner, args);
+			if (runner instanceof ApplicationRunner) {
+				callRunner((ApplicationRunner) runner, args);
 			}
-			if (runner instanceof CommandLineRunner commandLineRunner) {
-				callRunner(commandLineRunner, args);
+			if (runner instanceof CommandLineRunner) {
+				callRunner((CommandLineRunner) runner, args);
 			}
 		}
 	}
@@ -799,8 +846,8 @@ public class SpringApplication {
 
 	private Collection<SpringBootExceptionReporter> getExceptionReporters(ConfigurableApplicationContext context) {
 		try {
-			ArgumentResolver argumentResolver = ArgumentResolver.of(ConfigurableApplicationContext.class, context);
-			return getSpringFactoriesInstances(SpringBootExceptionReporter.class, argumentResolver);
+			return getSpringFactoriesInstances(SpringBootExceptionReporter.class,
+					new Class<?>[] { ConfigurableApplicationContext.class }, context);
 		}
 		catch (Throwable ex) {
 			return Collections.emptyList();
@@ -872,8 +919,8 @@ public class SpringApplication {
 		if (exception == null) {
 			return 0;
 		}
-		if (exception instanceof ExitCodeGenerator generator) {
-			return generator.getExitCode();
+		if (exception instanceof ExitCodeGenerator) {
+			return ((ExitCodeGenerator) exception).getExitCode();
 		}
 		return getExitCodeFromExitCodeGeneratorException(exception.getCause());
 	}
@@ -937,17 +984,6 @@ public class SpringApplication {
 	 */
 	public void setAllowBeanDefinitionOverriding(boolean allowBeanDefinitionOverriding) {
 		this.allowBeanDefinitionOverriding = allowBeanDefinitionOverriding;
-	}
-
-	/**
-	 * Sets whether to allow circular references between beans and automatically try to
-	 * resolve them. Defaults to {@code false}.
-	 * @param allowCircularReferences if circular references are allowed
-	 * @since 2.6.0
-	 * @see AbstractAutowireCapableBeanFactory#setAllowCircularReferences(boolean)
-	 */
-	public void setAllowCircularReferences(boolean allowCircularReferences) {
-		this.allowCircularReferences = allowCircularReferences;
 	}
 
 	/**
@@ -1024,6 +1060,20 @@ public class SpringApplication {
 	 */
 	public void setAddConversionService(boolean addConversionService) {
 		this.addConversionService = addConversionService;
+	}
+
+	/**
+	 * Adds a {@link Bootstrapper} that can be used to initialize the
+	 * {@link BootstrapRegistry}.
+	 * @param bootstrapper the bootstraper
+	 * @since 2.4.0
+	 * @deprecated since 2.4.5 for removal in 2.6 in favor of
+	 * {@link #addBootstrapRegistryInitializer(BootstrapRegistryInitializer)}
+	 */
+	@Deprecated
+	public void addBootstrapper(Bootstrapper bootstrapper) {
+		Assert.notNull(bootstrapper, "Bootstrapper must not be null");
+		this.bootstrapRegistryInitializers.add(bootstrapper::initialize);
 	}
 
 	/**
@@ -1186,6 +1236,21 @@ public class SpringApplication {
 	}
 
 	/**
+	 * Sets the type of Spring {@link ApplicationContext} that will be created. If not
+	 * specified defaults to {@link #DEFAULT_SERVLET_WEB_CONTEXT_CLASS} for web based
+	 * applications or {@link AnnotationConfigApplicationContext} for non web based
+	 * applications.
+	 * @param applicationContextClass the context class to set
+	 * @deprecated since 2.4.0 for removal in 2.6.0 in favor of
+	 * {@link #setApplicationContextFactory(ApplicationContextFactory)}
+	 */
+	@Deprecated
+	public void setApplicationContextClass(Class<? extends ConfigurableApplicationContext> applicationContextClass) {
+		this.webApplicationType = WebApplicationType.deduceFromApplicationContext(applicationContextClass);
+		this.applicationContextFactory = ApplicationContextFactory.ofContextClass(applicationContextClass);
+	}
+
+	/**
 	 * Sets the factory that will be called to create the application context. If not set,
 	 * defaults to a factory that will create
 	 * {@link AnnotationConfigServletWebServerApplicationContext} for servlet web
@@ -1307,8 +1372,8 @@ public class SpringApplication {
 
 	/**
 	 * A basic main that can be used to launch an application. This method is useful when
-	 * application sources are defined through a {@literal --spring.main.sources} command
-	 * line argument.
+	 * application sources are defined via a {@literal --spring.main.sources} command line
+	 * argument.
 	 * <p>
 	 * Most developers will want to define their own main method and call the
 	 * {@link #run(Class, String...) run} method instead.
@@ -1325,10 +1390,9 @@ public class SpringApplication {
 	 * Static helper that can be used to exit a {@link SpringApplication} and obtain a
 	 * code indicating success (0) or otherwise. Does not throw exceptions but should
 	 * print stack traces of any encountered. Applies the specified
-	 * {@link ExitCodeGenerator ExitCodeGenerators} in addition to any Spring beans that
-	 * implement {@link ExitCodeGenerator}. When multiple generators are available, the
-	 * first non-zero exit code is used. Generators are ordered based on their
-	 * {@link Ordered} implementation and {@link Order @Order} annotation.
+	 * {@link ExitCodeGenerator} in addition to any Spring beans that implement
+	 * {@link ExitCodeGenerator}. In the case of multiple exit codes the highest value
+	 * will be used (or if all values are negative, the lowest value will be used)
 	 * @param context the context to close if possible
 	 * @param exitCodeGenerators exit code generators
 	 * @return the outcome (0 if successful)
@@ -1358,59 +1422,9 @@ public class SpringApplication {
 		return exitCode;
 	}
 
-	/**
-	 * Create an application from an existing {@code main} method that can run with
-	 * additional {@code @Configuration} or bean classes. This method can be helpful when
-	 * writing a test harness that needs to start an application with additional
-	 * configuration.
-	 * @param main the main method entry point that runs the {@link SpringApplication}
-	 * @return a {@link SpringApplication.Augmented} instance that can be used to add
-	 * configuration and run the application
-	 * @since 3.1.0
-	 * @see #withHook(SpringApplicationHook, Runnable)
-	 */
-	public static SpringApplication.Augmented from(ThrowingConsumer<String[]> main) {
-		Assert.notNull(main, "Main must not be null");
-		return new Augmented(main, Collections.emptySet());
-	}
-
-	/**
-	 * Perform the given action with the given {@link SpringApplicationHook} attached if
-	 * the action triggers an {@link SpringApplication#run(String...) application run}.
-	 * @param hook the hook to apply
-	 * @param action the action to run
-	 * @since 3.0.0
-	 * @see #withHook(SpringApplicationHook, ThrowingSupplier)
-	 */
-	public static void withHook(SpringApplicationHook hook, Runnable action) {
-		withHook(hook, () -> {
-			action.run();
-			return null;
-		});
-	}
-
-	/**
-	 * Perform the given action with the given {@link SpringApplicationHook} attached if
-	 * the action triggers an {@link SpringApplication#run(String...) application run}.
-	 * @param <T> the result type
-	 * @param hook the hook to apply
-	 * @param action the action to run
-	 * @return the result of the action
-	 * @since 3.0.0
-	 * @see #withHook(SpringApplicationHook, Runnable)
-	 */
-	public static <T> T withHook(SpringApplicationHook hook, ThrowingSupplier<T> action) {
-		applicationHook.set(hook);
-		try {
-			return action.get();
-		}
-		finally {
-			applicationHook.remove();
-		}
-	}
-
 	private static void close(ApplicationContext context) {
-		if (context instanceof ConfigurableApplicationContext closable) {
+		if (context instanceof ConfigurableApplicationContext) {
+			ConfigurableApplicationContext closable = (ConfigurableApplicationContext) context;
 			closable.close();
 		}
 	}
@@ -1419,71 +1433,6 @@ public class SpringApplication {
 		List<E> list = new ArrayList<>(elements);
 		list.sort(AnnotationAwareOrderComparator.INSTANCE);
 		return new LinkedHashSet<>(list);
-	}
-
-	/**
-	 * Used to configure and run an augmented {@link SpringApplication} where additional
-	 * configuration should be applied.
-	 *
-	 * @since 3.1.0
-	 */
-	public static class Augmented {
-
-		private final ThrowingConsumer<String[]> main;
-
-		private final Set<Class<?>> sources;
-
-		Augmented(ThrowingConsumer<String[]> main, Set<Class<?>> sources) {
-			this.main = main;
-			this.sources = Set.copyOf(sources);
-		}
-
-		/**
-		 * Return a new {@link SpringApplication.Augmented} instance with additional
-		 * sources that should be applied when the application runs.
-		 * @param sources the sources that should be applied
-		 * @return a new {@link SpringApplication.Augmented} instance
-		 */
-		public Augmented with(Class<?>... sources) {
-			LinkedHashSet<Class<?>> merged = new LinkedHashSet<>(this.sources);
-			merged.addAll(Arrays.asList(sources));
-			return new Augmented(this.main, merged);
-		}
-
-		/**
-		 * Run the application using the given args.
-		 * @param args the main method args
-		 * @return the running {@link ApplicationContext}
-		 */
-		public ConfigurableApplicationContext run(String... args) {
-			ContextLoaderHook hook = new ContextLoaderHook(this.sources);
-			withHook(hook, () -> this.main.accept(args));
-			return hook.applicationContext;
-		}
-
-		private static class ContextLoaderHook implements SpringApplicationHook {
-
-			private final Set<Class<?>> sources;
-
-			private ConfigurableApplicationContext applicationContext;
-
-			ContextLoaderHook(Set<Class<?>> sources) {
-				this.sources = sources;
-			}
-
-			@Override
-			public SpringApplicationRunListener getRunListener(SpringApplication springApplication) {
-				springApplication.addPrimarySources(this.sources);
-				return new SpringApplicationRunListener() {
-					@Override
-					public void contextPrepared(ConfigurableApplicationContext context) {
-						ContextLoaderHook.this.applicationContext = context;
-					}
-				};
-			}
-
-		}
-
 	}
 
 	/**
@@ -1506,52 +1455,6 @@ public class SpringApplication {
 		@Override
 		public void postProcessBeanFactory(ConfigurableListableBeanFactory beanFactory) throws BeansException {
 			DefaultPropertiesPropertySource.moveToEnd(this.context.getEnvironment());
-		}
-
-	}
-
-	static class SpringApplicationRuntimeHints extends BindableRuntimeHintsRegistrar {
-
-		SpringApplicationRuntimeHints() {
-			super(SpringApplication.class);
-		}
-
-	}
-
-	/**
-	 * Exception that can be thrown to silently exit a running {@link SpringApplication}
-	 * without handling run failures.
-	 *
-	 * @since 3.0.0
-	 */
-	public static class AbandonedRunException extends RuntimeException {
-
-		private final ConfigurableApplicationContext applicationContext;
-
-		/**
-		 * Create a new {@link AbandonedRunException} instance.
-		 */
-		public AbandonedRunException() {
-			this(null);
-		}
-
-		/**
-		 * Create a new {@link AbandonedRunException} instance with the given application
-		 * context.
-		 * @param applicationContext the application context that was available when the
-		 * run was abandoned
-		 */
-		public AbandonedRunException(ConfigurableApplicationContext applicationContext) {
-			this.applicationContext = applicationContext;
-		}
-
-		/**
-		 * Return the application context that was available when the run was abandoned or
-		 * {@code null} if no context was available.
-		 * @return the application context
-		 */
-		public ConfigurableApplicationContext getApplicationContext() {
-			return this.applicationContext;
 		}
 
 	}
