@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ package org.springframework.boot.context.properties.source;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -41,35 +42,31 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameShouldNotBeNull() {
 		assertThatIllegalArgumentException().isThrownBy(() -> ConfigurationPropertyName.of(null))
-			.withMessageContaining("Name must not be null");
+				.withMessageContaining("Name must not be null");
 	}
 
 	@Test
 	void ofNameShouldNotStartWithDash() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("-foo"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("-foo")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotStartWithDot() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of(".foo"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of(".foo")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotEndWithDot() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("foo."))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("foo.")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameShouldNotContainUppercase() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("fOo"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("fOo")).withMessageContaining("is not valid");
 	}
 
 	@Test
@@ -77,16 +74,16 @@ class ConfigurationPropertyNameTests {
 		String invalid = "_@$%*+=':;";
 		for (char c : invalid.toCharArray()) {
 			assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-				.isThrownBy(() -> ConfigurationPropertyName.of("foo" + c))
-				.satisfies((ex) -> assertThat(ex.getMessage()).contains("is not valid"));
+					.isThrownBy(() -> ConfigurationPropertyName.of("foo" + c))
+					.satisfies((ex) -> assertThat(ex.getMessage()).contains("is not valid"));
 		}
 	}
 
 	@Test
 	void ofNameWhenSimple() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("name");
-		assertThat(name).hasToString("name");
-		assertThat(name.getNumberOfElements()).isOne();
+		assertThat(name.toString()).isEqualTo("name");
+		assertThat(name.getNumberOfElements()).isEqualTo(1);
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("name");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -94,8 +91,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenStartsWithNumber() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("1foo");
-		assertThat(name).hasToString("1foo");
-		assertThat(name.getNumberOfElements()).isOne();
+		assertThat(name.toString()).isEqualTo("1foo");
+		assertThat(name.getNumberOfElements()).isEqualTo(1);
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("1foo");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -103,7 +100,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenRunOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]");
-		assertThat(name).hasToString("foo[bar]");
+		assertThat(name.toString()).isEqualTo("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -113,7 +110,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar");
-		assertThat(name).hasToString("foo.bar");
+		assertThat(name.toString()).isEqualTo("foo.bar");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -123,7 +120,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar]");
-		assertThat(name).hasToString("foo[bar]");
+		assertThat(name.toString()).isEqualTo("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -133,7 +130,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleRunOnAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]baz");
-		assertThat(name).hasToString("foo[bar].baz");
+		assertThat(name.toString()).isEqualTo("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -145,7 +142,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar].baz");
-		assertThat(name).hasToString("foo[bar].baz");
+		assertThat(name.toString()).isEqualTo("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -157,28 +154,25 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenMissingCloseBracket() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("[bar"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("[bar")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenMissingOpenBracket() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("bar]"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("bar]")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenMultipleMismatchedBrackets() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("[a[[[b]ar]"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("[a[[[b]ar]")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWhenNestedBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[a[c][[b]ar]]");
-		assertThat(name).hasToString("foo[a[c][[b]ar]]");
+		assertThat(name.toString()).isEqualTo("foo[a[c][[b]ar]]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("a[c][[b]ar]");
 	}
@@ -186,14 +180,13 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithWhitespaceInName() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("foo. bar"))
-			.withMessageContaining("is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("foo. bar")).withMessageContaining("is not valid");
 	}
 
 	@Test
 	void ofNameWithWhitespaceInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[b a r]");
-		assertThat(name).hasToString("foo[b a r]");
+		assertThat(name.toString()).isEqualTo("foo[b a r]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b a r");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -203,7 +196,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithUppercaseInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[BAR]");
-		assertThat(name).hasToString("foo[BAR]");
+		assertThat(name.toString()).isEqualTo("foo[BAR]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("BAR");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -213,8 +206,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofWhenNameIsEmptyShouldReturnEmptyName() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("");
-		assertThat(name.toString()).isEmpty();
-		assertThat(name.append("foo")).hasToString("foo");
+		assertThat(name.toString()).isEqualTo("");
+		assertThat(name.append("foo").toString()).isEqualTo("foo");
 	}
 
 	@Test
@@ -232,13 +225,13 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void adaptWhenNameIsNullShouldThrowException() {
 		assertThatIllegalArgumentException().isThrownBy(() -> ConfigurationPropertyName.adapt(null, '.'))
-			.withMessageContaining("Name must not be null");
+				.withMessageContaining("Name must not be null");
 	}
 
 	@Test
 	void adaptWhenElementValueProcessorIsNullShouldAdapt() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.', null);
-		assertThat(name).hasToString("foo");
+		assertThat(name.toString()).isEqualTo("foo");
 	}
 
 	@Test
@@ -255,7 +248,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("br");
-		assertThat(name).hasToString("f.br");
+		assertThat(name.toString()).isEqualTo("f.br");
 	}
 
 	@Test
@@ -265,7 +258,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f-_o");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b_r");
-		assertThat(name).hasToString("f-o.br");
+		assertThat(name.toString()).isEqualTo("f-o.br");
 	}
 
 	@Test
@@ -275,32 +268,32 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("fOo");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("bar");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bAr");
-		assertThat(name).hasToString("foo.bar");
+		assertThat(name.toString()).isEqualTo("foo.bar");
 	}
 
 	@Test
 	void adaptShouldUseElementValueProcessor() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("FOO_THE-BAR", '_',
 				(c) -> c.toString().replace("-", ""));
-		assertThat(name).hasToString("foo.thebar");
+		assertThat(name.toString()).isEqualTo("foo.thebar");
 	}
 
 	@Test
 	void adaptShouldSupportIndexedElements() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.');
-		assertThat(name).hasToString("foo");
-		assertThat(name.getNumberOfElements()).isOne();
+		assertThat(name.toString()).isEqualTo("foo");
+		assertThat(name.getNumberOfElements()).isEqualTo(1);
 		name = ConfigurationPropertyName.adapt("[foo]", '.');
-		assertThat(name).hasToString("[foo]");
-		assertThat(name.getNumberOfElements()).isOne();
+		assertThat(name.toString()).isEqualTo("[foo]");
+		assertThat(name.getNumberOfElements()).isEqualTo(1);
 		name = ConfigurationPropertyName.adapt("foo.bar", '.');
-		assertThat(name).hasToString("foo.bar");
+		assertThat(name.toString()).isEqualTo("foo.bar");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo[foo.bar]", '.');
-		assertThat(name).hasToString("foo[foo.bar]");
+		assertThat(name.toString()).isEqualTo("foo[foo.bar]");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo.[bar].baz", '.');
-		assertThat(name).hasToString("foo[bar].baz");
+		assertThat(name.toString()).isEqualTo("foo[bar].baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
@@ -341,8 +334,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void getLastElementWhenEmptyShouldReturnEmptyString() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.EMPTY;
-		assertThat(name.getLastElement(Form.ORIGINAL)).isEmpty();
-		assertThat(name.getLastElement(Form.UNIFORM)).isEmpty();
+		assertThat(name.getLastElement(Form.ORIGINAL)).isEqualTo("");
+		assertThat(name.getLastElement(Form.UNIFORM)).isEqualTo("");
 	}
 
 	@Test
@@ -394,8 +387,8 @@ class ConfigurationPropertyNameTests {
 
 	@Test
 	void getNumberOfElementsShouldReturnNumberOfElement() {
-		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isZero();
-		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isOne();
+		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isEqualTo(0);
+		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isEqualTo(1);
 		assertThat(ConfigurationPropertyName.of("x.y").getNumberOfElements()).isEqualTo(2);
 		assertThat(ConfigurationPropertyName.of("x[0].y").getNumberOfElements()).isEqualTo(3);
 	}
@@ -403,27 +396,27 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void appendWhenNotIndexedShouldAppendWithDot() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo");
-		assertThat(name.append("bar")).hasToString("foo.bar");
+		assertThat(name.append("bar").toString()).isEqualTo("foo.bar");
 	}
 
 	@Test
 	void appendWhenIndexedShouldAppendWithBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("[bar]");
 		assertThat(name.isLastElementIndexed()).isTrue();
-		assertThat(name).hasToString("foo[bar]");
+		assertThat(name.toString()).isEqualTo("foo[bar]");
 	}
 
 	@Test
 	void appendWhenElementNameIsNotValidShouldThrowException() {
 		assertThatExceptionOfType(InvalidConfigurationPropertyNameException.class)
-			.isThrownBy(() -> ConfigurationPropertyName.of("foo").append("-bar"))
-			.withMessageContaining("Configuration property name '-bar' is not valid");
+				.isThrownBy(() -> ConfigurationPropertyName.of("foo").append("-bar"))
+				.withMessageContaining("Configuration property name '-bar' is not valid");
 	}
 
 	@Test
 	void appendWhenElementNameMultiDotShouldAppend() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("bar.baz");
-		assertThat(name).hasToString("foo.bar.baz");
+		assertThat(name.toString()).isEqualTo("foo.bar.baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
@@ -469,8 +462,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void chopWhenLessThenSizeShouldReturnChopped() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
-		assertThat(name.chop(1)).hasToString("foo");
-		assertThat(name.chop(2)).hasToString("foo.bar");
+		assertThat(name.chop(1).toString()).isEqualTo("foo");
+		assertThat(name.chop(2).toString()).isEqualTo("foo.bar");
 	}
 
 	@Test
@@ -588,28 +581,28 @@ class ConfigurationPropertyNameTests {
 		names.add(ConfigurationPropertyName.of("foo.baz"));
 		names.add(ConfigurationPropertyName.of("foo"));
 		Collections.sort(names);
-		assertThat(names.stream().map(ConfigurationPropertyName::toString).toList()).containsExactly("foo", "foo[2]",
-				"foo[10]", "foo.bar", "foo.bard", "foo.baz");
+		assertThat(names.stream().map(ConfigurationPropertyName::toString).collect(Collectors.toList()))
+				.containsExactly("foo", "foo[2]", "foo[10]", "foo.bar", "foo.bard", "foo.baz");
 	}
 
 	@Test
 	void compareDifferentLengthsShouldSortNames() {
-		ConfigurationPropertyName name = ConfigurationPropertyName.of("spring.web.resources.chain.strategy.content");
+		ConfigurationPropertyName name = ConfigurationPropertyName.of("spring.resources.chain.strategy.content");
 		ConfigurationPropertyName other = ConfigurationPropertyName
-			.of("spring.web.resources.chain.strategy.content.enabled");
-		assertThat(name).isLessThan(other);
+				.of("spring.resources.chain.strategy.content.enabled");
+		assertThat(name.compareTo(other)).isLessThan(0);
 	}
 
 	@Test
 	void toStringShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("fOO.b_-a-r", '.');
-		assertThat(name).hasToString("foo.b-a-r");
+		assertThat(name.toString()).isEqualTo("foo.b-a-r");
 	}
 
 	@Test
 	void toStringFromOfShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar-baz");
-		assertThat(name).hasToString("foo.bar-baz");
+		assertThat(name.toString()).isEqualTo("foo.bar-baz");
 	}
 
 	@Test
@@ -630,17 +623,17 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName n14 = ConfigurationPropertyName.of("[1]");
 		ConfigurationPropertyName n15 = ConfigurationPropertyName.of("[-1]");
 		assertThat((Object) n01).isEqualTo(n01);
-		assertThat(n01).hasSameHashCodeAs(n01);
+		assertThat(n01.hashCode()).isEqualTo(n01.hashCode());
 		assertThat((Object) n01).isEqualTo(n02);
-		assertThat(n01).hasSameHashCodeAs(n02);
+		assertThat(n01.hashCode()).isEqualTo(n02.hashCode());
 		assertThat((Object) n01).isEqualTo(n03);
-		assertThat(n01).hasSameHashCodeAs(n03);
+		assertThat(n01.hashCode()).isEqualTo(n03.hashCode());
 		assertThat((Object) n01).isEqualTo(n04);
-		assertThat(n01).hasSameHashCodeAs(n04);
+		assertThat(n01.hashCode()).isEqualTo(n04.hashCode());
 		assertThat((Object) n11).isEqualTo(n03);
-		assertThat(n11).hasSameHashCodeAs(n03);
+		assertThat(n11.hashCode()).isEqualTo(n03.hashCode());
 		assertThat((Object) n03).isEqualTo(n11);
-		assertThat(n03).hasSameHashCodeAs(n11);
+		assertThat(n03.hashCode()).isEqualTo(n11.hashCode());
 		assertThat((Object) n01).isNotEqualTo(n05);
 		assertThat((Object) n01).isNotEqualTo(n06);
 		assertThat((Object) n07).isNotEqualTo(n08);
@@ -655,7 +648,7 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName n1 = ConfigurationPropertyName.of("nested");
 		ConfigurationPropertyName n2 = ConfigurationPropertyName.EMPTY.append("nested");
 		ConfigurationPropertyName n3 = ConfigurationPropertyName.of("nested.value").getParent();
-		assertThat(n1).hasSameHashCodeAs(n2).hasSameHashCodeAs(n3);
+		assertThat(n1.hashCode()).isEqualTo(n2.hashCode()).isEqualTo(n3.hashCode());
 		assertThat(n1).isEqualTo(n2).isEqualTo(n3);
 	}
 
@@ -725,17 +718,17 @@ class ConfigurationPropertyNameTests {
 	void hashCodeIsStored() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("hash.code");
 		int hashCode = name.hashCode();
-		// hasFieldOrPropertyWithValue would look up for hashCode()
+		// hasFieldOrPropertyWithValue would lookup for hashCode()
 		assertThat(ReflectionTestUtils.getField(name, "hashCode")).isEqualTo(hashCode);
 	}
 
 	@Test
-	void hasIndexedElementWhenHasIndexedElementReturnsTrue() {
+	void hasIndexedElementWhenHasIndexedElementReturnsTrue() throws Exception {
 		assertThat(ConfigurationPropertyName.of("foo[bar]").hasIndexedElement()).isTrue();
 	}
 
 	@Test
-	void hasIndexedElementWhenHasNoIndexedElementReturnsFalse() {
+	void hasIndexedElementWhenHasNoIndexedElementReturnsFalse() throws Exception {
 		assertThat(ConfigurationPropertyName.of("foo.bar").hasIndexedElement()).isFalse();
 	}
 
